--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,12 @@
 set -g default-terminal "screen-256color"
+
+# Mouse support (to help getting started)
 set -g mode-mouse on
+set-option -g mouse-select-pane on
+
+# Use Ctrl-A
+unbind C-b
+set -g prefix C-a
 
 #### COLOUR
 
