--- a/tmux.conf
+++ b/tmux.conf
@@ -4,6 +4,10 @@ set -g default-terminal "screen-256color"
 set -g mode-mouse on
 set-option -g mouse-select-pane on
 
+# Unicode
+setw -g utf8 on
+set -g status-utf8 on
+
 # Use Ctrl-A
 unbind C-b
 set -g prefix C-a
