Allow tmux to send Ctrl-A

--- a/tmux.conf
+++ b/tmux.conf
@@ -11,6 +11,8 @@ set -g status-utf8 on
 # Use Ctrl-A
 unbind C-b
 set -g prefix C-a
+# Use Ctrl-A A to send Ctrl-A
+bind a send-prefix
 
 #### COLOUR
 
