Create new session if one doesn't exist when attaching

--- a/tmux.conf
+++ b/tmux.conf
@@ -45,3 +45,6 @@ set-option -g display-panes-colour colour166 #orange
 
 # clock
 set-window-option -g clock-mode-colour colour64 #green
+
+# Create session when attaching if not available
+new-session -n $HOST
