--- a/.gitmodules
+++ b/.gitmodules
@@ -46,3 +46,6 @@
 [submodule "vim/bundle/vim-apiblueprint"]
 	path = vim/bundle/vim-apiblueprint
 	url = https://github.com/kylef/apiblueprint.vim.git
+[submodule "vim/bundle/vim-ledger"]
+	path = vim/bundle/vim-ledger
+	url = https://github.com/ledger/vim-ledger.git
