--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -1,9 +1,12 @@
 [user]
 	name = Henri Bergius
 	email = henri.bergius@iki.fi
+	signingkey = henri.bergius@iki.fi
 [diff "odf"]
   textconv = odt2txt
 [color]
 	diff = true
 [push]
 	default = matching
+[commit]
+	gpgsign = true
