--- a/zsh/.tmux.conf
+++ b/zsh/.tmux.conf
@@ -3,8 +3,8 @@ set -g default-terminal "screen-256color"
 # Mouse support (to help getting started)
 #set -g mode-mouse on
 #set-option -g mouse-select-pane on
-set -g mouse-utf8 on
-set -g mouse on
+#set -g mouse-utf8 on
+#set -g mouse on
 
 # Unicode
 setw -g utf8 on
