--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@ tmp
 backup
 vim/.vim/.netrwhist
 .DS_Store
+roles/gantsign.oh-my-zsh/
+roles/geerlingguy.ansible/
+roles/marinepi-provisioning/
+roles/robertdebock.travis/
