--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,7 +4,7 @@ on:
   push:
 
 jobs:
-  buildx:
+  test:
     runs-on: ubuntu-latest
     steps:
       -
@@ -12,6 +12,9 @@ jobs:
         uses: actions/checkout@v2
         with:
           submodules: true
+      -
+        name: Set up QEMU for multiarch building
+        uses: docker/setup-qemu-action@v1
       -
         uses: docker/setup-buildx-action@v1
         id: buildx
