--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,3 +28,13 @@ jobs:
           push: false
           tags: |
             bergie/shell:latest
+  merge-me:
+    name: Auto-merge dependency updates
+    needs: test
+    runs-on: ubuntu-latest
+    steps:
+      -
+        uses: ridedott/merge-me-action@v1.8.53
+        with:
+          GITHUB_LOGIN: 'dependabot[bot]'
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
