--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,9 +32,9 @@ jobs:
         name: Login to GitHub Packages Docker Registry
         uses: docker/login-action@v1
         with:
-          registry: docker.pkg.github.com
+          registry: ghcr.io
           username: ${{ github.repository_owner }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          password: ${{ secrets.GHCR_PAT }}
       -
         name: Build and push
         uses: docker/build-push-action@v2
@@ -44,5 +44,5 @@ jobs:
           push: true
           tags: |
             bergie/shell:latest
-            docker.pkg.github.com/bergie/dotfiles/shell:latest
+            ghcr.io/bergie/shell:latest
 
